welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:29: error: not found: value faire
faire(Haut); 
^